# message

./: Cargo.toml  Dockerfile  README.md
.sqlx/: query-08ce21f920b4e02f5aec861e4434ea25781fe7cd0d295621cdfae8aa7b619667.json  query-192e02907bec04bae889cfe37a069b2f67164aae8c45da1ab6b1b6a3ad59183d.json  query-21ce5639f8ed93ab9326526922d68f7a7f5dd23c3f35b460c831f6e1afb8117e.json  query-3eb7c1595fdf72a633dd79dbd6942bcb5be86e3ab2e90fe681fe8eb1c4bba02e.json  query-b614146f5efce00a48e6c356c0e7280aafd766509cbad5ecc4431d1a0f3733e2.json
migrations/: 20240919124101_create_message.down.sql  20240919124101_create_message.up.sql  20240920054118_emails_to_contacts.up.sql  20250303185203_tg_api_key.down.sql  20250303185203_tg_api_key.up.sql
src/: db.rs  main.rs  router.rs
